[package]
name = "tsl"
version = "0.2.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2.1"
console = "0.16.2"

[[bin]]
name = "tsl"
path = "src/main.rs"
